#pragma once

#include "syntax/Lexer.h"

namespace testc {

	// Lexer implementation
	class LexerImpl : public Lexer {
	};

}
